<resources>
    <string name="app_name">LovelyTours</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error</string>
    <string name="enter_email">Enter you Email</string>
    <string name="guide">Guide</string>
    <string name="tourist">Tourist</string>
    <string name="start_point">Start Point:</string>
    <string name="destination">Destination</string>
    <string name="description">Description</string>
    <string name="max_people">Max tourists</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="duration">Duration</string>
    <string name="name">Name</string>
    <string name="create_tour">Create Tour</string>
    <string name="my_tours">My Tours</string>
    <string name="tour_created">The tour is created successfully</string>
    <string name="register_to_tour">Register To Tour</string>
    <string name="available_tickets">Available tickets</string>
    <string name="registration_successfully">You have successfully registered!</string>
    <string name="tickets">Tickets</string>
    <string name="my_profile">My Profile</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="update_your_account">Update your account</string>
    <string name="please_wait">Please wait...</string>
    <string name="my_location">My Location</string>
    <string name="available_tomrrow">You have %1$d tours available tomorrow</string>
    <string name="click_to_order">"Click to order %1$d tickets "</string>
    <string name="order_successfully">Order successfully</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="alarm">Alarm!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="sign_out">Sign Out</string>
    <string name="pay_attention">This permission is required for alert befote tour begining</string>
    <string name="tour_notification">"Your tour to %1$s is coming up about 1 hour.\nDon't forget to arrive to the start point at %2$s "</string>
    <string name="search">Search</string>
    <string name="you_have_a_new_tour_registration">"<![CDATA[<b>%1$s</b>]]> buy <![CDATA[<b>%2$d</b>]]> tickets to your <![CDATA[<b>%3$s</b>]]> tour."</string>
    <string name="tour_favorite">Tour is successfully added.</string>
    <string name="favorites">Favorites</string>
    <string name="your_name">Your Name</string>
    <string name="your_phone">Your Phone</string>
    <string name="your_email">Your Email</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up_text">Don\'t have an account? Please click here</string>
    <string name="login">Login</string>
    <string name="search_by_description">Serach By Description</string>

</resources>