<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/orange_light"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:fontFamily="@font/font_lovelytours"
            android:textColorHint="@color/SaddleBrown"
            android:textStyle="bold"
            android:text="@string/my_profile"/>

        <ImageView
            android:id="@+id/edit"
            android:layout_gravity="end"
            android:src="@drawable/_mode_edit_"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        android:padding="6dp"
        android:cropToPadding="true"
        android:src="@drawable/bg_border"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:hint="@string/your_name"
        android:focusable="true"
        android:layout_marginHorizontal="32dp"
        android:textColorHint="@color/red"
        app:boxStrokeColor="@color/red"
        app:hintTextColor="@color/red"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/etFullname"
            android:focusable="true"
            android:enabled="false"
            android:drawableRight="@drawable/name_icon"
            android:textColor="@color/SaddleBrown"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:hint="@string/your_phone"
        android:focusable="true"
        android:layout_marginHorizontal="32dp"
        android:textColorHint="@color/red"
        app:boxStrokeColor="@color/red"
        app:hintTextColor="@color/red"          android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/etPhonenumber"
            android:focusable="true"
            android:enabled="false"
            android:inputType="phone"
            android:textColor="@color/red"
            android:drawableRight="@drawable/phone_icon"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:hint="@string/your_email"
        android:focusable="true"
        android:layout_marginHorizontal="32dp"
        android:textColorHint="@color/red"
        app:boxStrokeColor="@color/red"
        app:hintTextColor="@color/red"        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/regEmail"
            android:focusable="true"
            android:enabled="false"
            android:inputType="phone"
            android:drawableRight="@drawable/email_icon"
            android:textColor="@color/red"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favorite"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/red"
        android:textColor="@color/Orange"
        android:text="@string/favorites"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_out"
        android:layout_marginTop="16dp"
        android:textColor="@color/Orange"
        android:backgroundTint="@color/red"
        android:layout_gravity="center"
        android:text="@string/sign_out"/>

</LinearLayout>

