<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:background="@color/orange_light"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/tvWelcomeTo"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/fontforget"
        android:text="WELCOME TO"
        android:textColor="@color/Gray"
        android:textSize="25dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvLovelyTours"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/fontforget"
        android:text="LOVELY TOURS"
        android:textColor="@color/Gray"
        android:textSize="25dp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/red"
        app:hintTextColor="@color/red"
        android:textColorHint="@color/red"
        android:hint="@string/enter_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:textColor="@color/red"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/red"
            app:hintTextColor="@color/red"
            android:textColorHint="@color/red"
            android:hint="@string/enter_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/red"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/eye_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="8dp"
            android:src="@drawable/baseline_remove_red_eye_24"/>
    </FrameLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forget Password?"
        android:textStyle="bold"
        android:textColor="@color/Gray"
        android:id="@+id/tvForgetPass"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:backgroundTint="@color/red"
        android:textColor="@color/Orange"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRegister"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="16dp"
        android:textColor="@color/Gray"

        android:text="@string/sign_up_text"
        android:textStyle="bold"
        android:layout_gravity="center"/>

</LinearLayout>