<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/orange_light">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:navigationIcon="@drawable/baseline_arrow_back_24"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:padding="6dp"
            android:cropToPadding="true"
            android:src="@drawable/bg_border"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_add_a_photo_24"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/baseline_insert_photo_24"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:hint="@string/enter_name"
            android:focusable="true"
            android:layout_marginHorizontal="32dp"
            android:textColorHint="@color/red"
            app:boxStrokeColor="@color/red"
            app:hintTextColor="@color/red"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/etFullname"
                android:focusable="true"
                android:drawableRight="@drawable/name_icon"
                android:textColor="@color/red"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:hint="@string/enter_phone"
            android:focusable="true"
            android:layout_marginHorizontal="32dp"
            android:textColorHint="@color/red"
            app:boxStrokeColor="@color/red"
            app:hintTextColor="@color/red"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/etPhonenumber"
                android:focusable="true"
                android:inputType="phone"
                android:drawableRight="@drawable/phone_icon"
                android:textColor="@color/red"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:hint="@string/enter_email"
            android:focusable="true"
            android:layout_marginHorizontal="32dp"
            android:textColorHint="@color/red"
            app:boxStrokeColor="@color/red"
            app:hintTextColor="@color/red"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/regEmail"
                android:focusable="true"
                android:inputType="textEmailAddress"
                android:drawableRight="@drawable/email_icon"
                android:textColor="@color/red"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:hint="@string/enter_password"
            android:focusable="true"
            android:layout_marginHorizontal="32dp"
            android:textColorHint="@color/red"
            app:boxStrokeColor="@color/red"
            app:hintTextColor="@color/red"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/regPassword"
                android:focusable="true"
                android:inputType="textPassword"
                android:drawableRight="@drawable/eye_password"
                android:textColor="@color/red"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RadioGroup
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tourist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/tourist"/>

            <RadioButton
                android:id="@+id/guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/guide"/>
        </RadioGroup>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btnRegister"
            android:text="Save"
            android:textColor="@color/Orange"
            android:backgroundTint="@color/red"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

</ScrollView>

